# antispam2

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ADMIN_GUIDE.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  SETUP.md
scripts/: backup_db.sh  deploy.sh
src/: __init__.py  admin_commands.py  bot.py  config.py  database.py  exceptions.py  middleware.py  models.py  profile_analyzer.py  spam_detector.py
tests/: conftest.py  test_admin_commands.py  test_bot_handlers.py  test_config.py  test_database.py  test_models.py  test_spam_detector.py
