[project]
name = "antispamer-2"
version = "1.0.0"
description = "Telegram Anti-Spam Bot v2 with AI-powered spam detection"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
